<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:alpha=".5"
    tools:background="@color/background">

    <TextView
        android:id="@+id/passwordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:letterSpacing=".19"
        android:fontFamily="@font/roboto_mono_regular"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="3dp"
        android:theme="@style/HD.TextInput"
        app:boxBackgroundMode="none"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.livewire.audax.authentication.CheckedPasswordEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawablePadding="20dp"
            android:layout_marginStart="8dp"
            android:drawableStart="@drawable/password"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_mono_regular"
            android:hint="@string/password_place_holder"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:gravity="center_vertical"
            android:letterSpacing="0.06"
            android:textColorHint="@color/et_bg_tint"
            android:textCursorDrawable="@drawable/bg_cursor_black"
            android:textSize="@dimen/et_14" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:background="@color/et_bg_tint"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/requirement_not_met_user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/aeonik_regular"
        android:text="@string/requirements_not_met"
        android:textColor="@color/et_bg_tint"
        android:textSize="14sp"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_icon_alert_error" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <TableRow
            android:layout_marginStart="6dp">
            <TextView
                style="@style/FieldInfo"
                android:layout_width="0dp"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:text="@string/password_must_contain" />

        </TableRow>

        <TableRow
            android:layout_marginLeft="6dp"
            android:layout_marginTop="7dp">
            <TextView
                android:id="@+id/eightPlusCharactersInfo"
                style="@style/FieldInfo"
                android:layout_width="120dp"
                android:layout_margin="0dp"
                android:drawablePadding="5dp"
                android:text="@string/characters_long" />
            <TextView
                android:id="@+id/oneNumberInfo"
                style="@style/FieldInfo"
                android:layout_width="75dp"
                android:layout_margin="0dp"
                android:drawablePadding="5dp"
                android:text="@string/at_least_one_number"
                app:drawableStartCompat="@drawable/shape_black_indicator" />

            <TextView
                android:id="@+id/uppercaseCharInfo"
                style="@style/FieldInfo"
                android:layout_width="match_parent"
                android:layout_margin="0dp"
                android:drawablePadding="5dp"
                android:text="@string/one_uppercase_letter" />

        </TableRow>

        <TableRow
            android:layout_marginStart="6dp"
            android:layout_marginTop="@dimen/dp_5">
            <TextView
                android:id="@+id/lowercaseCharInfo"
                style="@style/FieldInfo"
                android:layout_width="120dp"
                android:layout_margin="0dp"
                android:drawablePadding="5dp"
                android:text="@string/one_lowercase_letter"
                app:drawableStartCompat="@drawable/shape_black_indicator" />

            <TextView
                android:id="@+id/specialCharInfo"
                style="@style/FieldInfo"
                android:layout_width="0dp"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:text="@string/at_least_one_special_character"
                app:drawableStartCompat="@drawable/shape_black_indicator" />

        </TableRow>

    </TableLayout>

</LinearLayout>
