<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.activity.LoginActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_top"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:foregroundGravity="center_horizontal"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/iv_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logo"
            android:layout_marginTop="@dimen/size_40"
            android:fontFamily="@font/trois_mille_22"
            android:gravity="center_horizontal"
            android:text="@string/welcome_back"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_txt"
            android:layout_marginTop="@dimen/dp_5"
            android:gravity="center_horizontal"
            android:text="@string/please_login_to_continue"
            android:textSize="@dimen/size_16" />


    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="50dp"
        android:paddingRight="@dimen/size_24"
        android:paddingLeft="@dimen/size_24"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:backgroundTint="@color/et_bg_tint"
            android:drawableStart="@drawable/email"
            android:drawablePadding="16dp"
            android:fontFamily="@font/roboto_mono_regular"
            android:hint="@string/et_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingBottom="20dp"
            android:singleLine="true"
            android:textColor="@color/et_bg_tint"
            android:textSize="@dimen/et_14"
            tools:ignore="MissingConstraints" />
        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_below="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="70dp">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/size_20"
                    android:backgroundTint="@color/et_bg_tint"
                    android:drawableStart="@drawable/lock"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/roboto_mono_regular"
                    android:hint="@string/et_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingBottom="18dp"
                    android:singleLine="true"
                    android:textColor="@color/et_bg_tint"
                    android:textSize="@dimen/et_14"
                    tools:ignore="MissingConstraints" />
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>


        <TextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_password"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/forgot_password"
            android:alpha=".5"
            android:textColor="@color/et_bg_tint"
            android:textSize="@dimen/size_12" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_forgot_password"
            android:layout_marginTop="@dimen/size_40"
            android:background="@drawable/btn_signupo"
            android:fontFamily="@font/aeonik_bold"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_signup"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/btn_login"
            android:layout_marginTop="10dp"
            android:alpha=".5"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="Don't have an account? Sign up"
            android:textAlignment="center"
            android:textColor="@color/et_bg_tint"
            android:textSize="@dimen/size_12"
            android:textStyle="normal" />
    </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>