<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".authentication.activity.SignupActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<RelativeLayout
    android:layout_marginTop="@dimen/size_40"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="MissingConstraints"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/txt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:background="@drawable/ic_backarrow" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aeonik_regular"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="#fff"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <EditText
            android:id="@+id/editFName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/et_bg_tint"
            android:drawableStart="@drawable/user"
            android:drawablePadding="16dp"
            android:fontFamily="@font/roboto_mono_regular"
            android:hint="@string/et_first_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:letterSpacing="0.06"
            android:paddingBottom="20dp"
            android:singleLine="true"
            android:textColor="@color/et_bg_tint"
            android:textSize="@dimen/et_14"
            android:textStyle="normal"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editLName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_et_top"
            android:autofillHints=""
            android:backgroundTint="@color/et_bg_tint"
            android:drawableStart="@drawable/user"
            android:drawablePadding="16dp"
            android:fontFamily="@font/roboto_mono_regular"
            android:hint="@string/et_last_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:letterSpacing="0.06"
            android:paddingBottom="20dp"
            android:singleLine="true"
            android:textColor="@color/et_bg_tint"
            android:textSize="@dimen/et_14"
            tools:ignore="MissingConstraints" />


        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_et_top"
            android:autofillHints=""
            android:backgroundTint="@color/et_bg_tint"
            android:drawableStart="@drawable/email"
            android:drawablePadding="16dp"
            android:fontFamily="@font/roboto_mono_regular"
            android:hint="@string/et_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:letterSpacing="0.06"
            android:paddingBottom="20dp"
            android:singleLine="true"
            android:textColor="@color/et_bg_tint"
            android:textSize="@dimen/et_14"
            tools:ignore="MissingConstraints" />

        <com.livewire.app.authentication.SetPasswordView
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_et_top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:alpha=".5"
                android:fontFamily="@font/roboto"
                android:text="@string/by_signing_up"
                android:textColor="@color/et_bg_tint"
                android:textSize="12sp" />


        </RelativeLayout>

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_40"
            android:background="@drawable/btn_signupo"
            android:fontFamily="@font/aeonik_bold"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginTop="@dimen/size_8"
            android:alpha=".5"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/already_have_an_account_login"
            android:textAlignment="center"
            android:textColor="@color/et_bg_tint"
            android:textSize="@dimen/size_12"
            android:textStyle="normal" />
    </LinearLayout>
</RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>