<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reset_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".authentication.activity.ResetPasswordActivity">
    <RelativeLayout
        android:id="@+id/rl_top"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:foregroundGravity="center_horizontal"
            android:src="@drawable/ic_backarrow" />

        <TextView
            android:id="@+id/txt_forgot_password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_back"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/trois_mille_22"
            android:text="Forgot Password?"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txt_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_forgot_password_title"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="18dp"
            android:text="@string/please_eneter_your_registered_email_to_receive_a_reset_password_link"
            android:textSize="@dimen/size_16" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txt_message"
            android:paddingLeft="@dimen/size_24"
            android:paddingRight="@dimen/size_24">

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="54dp"
                android:backgroundTint="@color/et_bg_tint"
                android:drawableStart="@drawable/email"
                android:drawablePadding="16dp"
                android:fontFamily="@font/roboto_mono_regular"
                android:hint="@string/et_email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:paddingBottom="20dp"
                android:singleLine="true"
                android:textColor="@color/et_bg_tint"
                android:textSize="@dimen/et_14"
                tools:ignore="MissingConstraints" />


            <TextView
                android:id="@+id/txt_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editEmail"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:alpha=".5"
                android:fontFamily="@font/roboto"
                android:text="@string/sorry_we_can_t_find_anyone_with_the_username"
                android:textColor="@color/et_bg_tint"
                android:textSize="@dimen/size_12"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_error_message"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/size_40"
                android:background="@drawable/btn_signupo"
                android:fontFamily="@font/aeonik_bold"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_error_message"
                android:layout_marginTop="@dimen/size_40"
                android:background="@drawable/btn_signupo"
                android:fontFamily="@font/aeonik_bold"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="gone" />

        </RelativeLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>